--- a/src/styles/components/_similarbeers.scss
+++ b/src/styles/components/_similarbeers.scss
@@ -1,13 +1,12 @@
 .similarView {
   transition: all .2s ease-in-out;
+  position: relative;
 }
 .similarView:hover {
   transform: scale(1.1);
 }
-.similarView__border {
-  min-width:70x;
-  padding: 15px;
-}
 .similarView__beerName {
   color: #9B3200;
+  padding-top: 13px;
+  transform: translate(-50%, -50%);
 }
