--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,22 +29,18 @@ h2 {
   color: #ddc884; }
 
 .listingView {
-  position: relative; }
-
-.listingView {
+  position: relative;
   transition: all .2s ease-in-out; }
 
 .listingView:hover {
   transform: scale(1.2); }
 
-.listingView__beer_name {
-  text-align: center; }
-
 .listingView__main_tagline {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  color: #D77200; }
 
 .listingView__beerBackground {
   background-color: #FFFFFF; }
@@ -56,19 +52,22 @@ h2 {
   padding: 15px;
   margin-top: 50px; }
 
-.listingView__beerSize:hover {
-  transform: scale(1.2); }
-
 .listingView__centerByMargins {
   margin-left: 30px;
   margin-right: 30px; }
 
-.listingView__main_tagline {
-  color: #D77200; }
+.listingView__padding_for_msg {
+  padding-top: 50px; }
+
+@media screen and (max-width: 550px) {
+  .listingView__beerSize {
+    width: auto; } }
 
 .detailedview__image {
-  width: 60px;
   height: 140px; }
+
+.detailedview__image_main {
+  height: 170px; }
 
 .detailedview__main_beer {
   color: #9B3200; }
@@ -89,20 +88,11 @@ h2 {
   font-size: 1rem;
   color: #D77200; }
 
-.detailedview_height {
-  width: 100%; }
-
 .detailedview__staticHeight {
   height: 250px; }
 
-.modal-dialog {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) !important;
-  padding: 250px; }
-  .modal-dialog .modal-content {
-    width: 100%; }
+.detailedview__simliarPadding {
+  padding-bottom: 15px; }
 
 @media screen and (max-width: 550px) {
   .detailedview__main_beer {
@@ -112,24 +102,23 @@ h2 {
   .detailedview__text {
     font-size: 0.8rem; }
   .detailedview__image {
-    width: 60px;
-    height: 140px; }
-  .detailedview__borderImage {
-    min-width: 120px;
-    padding: 15px; } }
+    height: 50px; }
+  .detailedview__image_main {
+    height: 80px; }
+  .detailedview__staticHeight {
+    height: 120px; } }
 
 .similarView {
-  transition: all .2s ease-in-out; }
+  transition: all .2s ease-in-out;
+  position: relative; }
 
 .similarView:hover {
   transform: scale(1.1); }
 
-.similarView__border {
-  min-width: 70x;
-  padding: 15px; }
-
 .similarView__beerName {
-  color: #9B3200; }
+  color: #9B3200;
+  padding-top: 13px;
+  transform: translate(-50%, -50%); }
 
 .notfoundpage_link {
   padding-left: 10px; }
